# mentalmathapp

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICKSTART.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  analyse.py  docker-compose.yml  docker-start.sh  docker-stop.sh  main.py  math_session_log.csv  play.py  pyproject.toml
.streamlit/: config.toml
src/analytics/: insights_generator.py  performance_tracker.py  visualizations.py
src/components/: __init__.py
src/components/practice_loop/: __init__.py
src/components/practice_loop/frontend/: index.html
src/daily/: __init__.py  challenge.py
src/database/: db_manager.py  schema.sql
src/game_logic/: difficulty.py  scoring.py  session_manager.py  validator.py
src/gamification/: badge_manager.py  streak_tracker.py
src/models/: question.py  session.py  user_stats.py
src/question_generator/: arithmetic.py  base.py  compound.py  estimation.py  fractions.py  percentage.py  ratios.py
src/ui/: components.py  styles.py
src/ui/pages/: analytics_dashboard.py  daily_challenge.py  home_dashboard.py  mode_selection.py  practice_session.py  results.py
tests/: __init__.py  test_analytics.py  test_badge_manager.py  test_daily_challenge.py  test_db_migration.py  test_game_logic.py  test_question_generators.py  test_session_manager.py  test_validator.py  test_was_skipped.py
