[project]
name = "mentalmath"
version = "0.1.0"
description = "Mental Math Training Application for trading firm interview preparation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.1.0",
    "plotly>=5.17.0",
    "pydantic>=2.4.0",
    "python-dateutil>=2.8.0",
    "pytest>=7.4.0",
]
